# pointcloud-aligner

./: .gitignore  CMakeLists.txt  README.md
apps/: qt_manual_alignment_tool.cpp
include/color_icp/: color_icp.h  helper.h  remove_nan.h
src/: color_icp.cpp
